Updated few things

--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -27,11 +27,9 @@
     <body class="d-flex h-100 text-center text-white bg-dark">
         <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
             <main class="px-3 mt-auto">
-                <h1>OnlyUs </h1>
+                <h1>OnlyUs Web App</h1>
                 
-                <p class="lead mb-4">
-                    Simple OnlyUs  using Node.js and Socket.io
-                </p>
+             
 
                 <p class="lead">
                     <form action="/create-room" method="GET" class="mb-2">
