--- a/views/room/room.ejs
+++ b/views/room/room.ejs
@@ -9,10 +9,7 @@
       content="OnlyUs - Watch Youtube Videos Synchronized."
     />
     <meta name="author" content="Github: its_shyam640" />
-    <meta
-      name="keywords"
-      content="OnlyUs, Youtube, Video, Sync"
-    />
+    <meta name="keywords" content="OnlyUs, Youtube, Video, Sync" />
     <title>OnlyUs - Room</title>
 
     <!-- Icons -->
@@ -75,7 +72,7 @@
       aria-label="Navbar"
     >
       <div class="container-fluid">
-        <a class="navbar-brand pb-2" href="/">OnlyUs </a>
+        <a class="navbar-brand pb-2" href="/">OnlyUs</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -153,7 +150,7 @@
             >
               <iframe
                 width="600"
-                height="300"
+                height="400"
                 src="https://www.youtube.com/embed/bTqVqk7FSmY?origin=<%= domain %>&amp;iv_load_policy=3&amp;modestbranding=1&amp;playsinline=1&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1"
                 allowfullscreen
                 allowtransparency
